# VChess

./: .gitignore  CMakeLists.txt  README.md  build.zig  main.cpp
src/: board.cpp  board.h  book.cpp  book.h  definitions.h  evaluate.cpp  evaluate.h  magic_search.cpp  magic_search.h  main.cpp  misc.cpp  misc.h  opening.cpp  opening.h  precompute.cpp  precompute.h  screen.cpp  screen.h  search.cpp  search.h  tests.cpp  tests.h  uci.cpp  uci.h
src/gui/: gui.cpp  gui.h
